k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/managed-by: kubectl
