k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/component: server
    app.kubernetes.io/version: "latest"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
        app.kubernetes.io/component: server
    spec:
      # pod security context
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault

      # avoid replicas
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: httpbin
                topologyKey: kubernetes.io/hostname

      # turn off automount token
      automountServiceAccountToken: false

      containers:
        - name: httpbin
        # for development can be used httpbin:latest
          image: httpbin:local
          # turned off for local testing
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          # container security context
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          # config-map env
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: gunicorn-worker-tmp
              mountPath: /tmp/gunicorn

          # request limit
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          # liveness
          livenessProbe:
            httpGet:
              path: /get
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
            timeoutSeconds: 5

          # readiness
          readinessProbe:
            httpGet:
              path: /get
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 3

          # startup
          startupProbe:
            httpGet:
              path: /get
              port: http
            initialDelaySeconds: 10
            failureThreshold: 30
            periodSeconds: 5

      volumes:
        - name: tmp
          emptyDir: {}
        - name: gunicorn-worker-tmp
          emptyDir: {}
