k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: httpbin
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
